noinst_LIBRARIES=libblockhash.a

BLOCKHASH_H = \
	sph_blake.h \
	sph_bmw.h \
	sph_groestl.h \
	sph_jh.h \
	sph_keccak.h \
	sph_skein.h \
	sph_luffa.h \
	sph_cubehash.h \
	sph_shavite.h \
	sph_simd.h \
	sph_echo.h \
	sph_types.h \
	scrypt.h \
	hashblock.h


libblockhash_a_SOURCES = \
	blake.c \
  bmw.c \
  cubehash.c \
  echo.c \
  groestl.c \
  jh.c \
  keccak.c \
  luffa.c \
  shavite.c \
  simd.c \
  skein.c \
  scrypt.cpp \
  $(BLOCKHASH_H)
  $(BITCOIN_CORE_H)

	
	

	